fix color cards e align searchBar

--- a/src/components/BarraPesquisa.css
+++ b/src/components/BarraPesquisa.css
@@ -6,6 +6,7 @@
       display: flex;
        width: 100%;
        justify-content: center;
+       align-items: center;
       .form-control {
         margin: 0 10px;
         min-width: 200px;
