--- a/src/components/CardHero.css
+++ b/src/components/CardHero.css
@@ -76,7 +76,7 @@
     }
   }
   .card-body {
-    background-color: #ec1d24d3;
+    background-color: #e62429;
     width: 100%;
     padding: 0;
     text-align: center;
